name:                   spock-http-auth
version:                0.1.0.0
synopsis:               HTTP authentication framework for Spock
description:
  HTTP authentication is not limited to those defined by the standard:
  .
  * <https://en.wikipedia.org/wiki/Basic_access_authentication Basic HTTP Authentication>
  .
  * <https://en.wikipedia.org/wiki/Digest_access_authentication Digest HTTP Authentication>
  .
  This library provides building block for developers to build their own
  authentication schemes on top of standard HTTP vocabulary.
  .
  Examples of alternative HTTP authentication schemes:
  .
  * <http://docs.aws.amazon.com/AmazonS3/latest/dev/RESTAuthentication.html Amazon S3: Signing and Authenticating REST Requests>
  .
  * <http://www.innovation.ch/personal/ronald/ntlm.html NTLM Authentication Scheme for HTTP>

homepage:               https://github.com/trskop/spock-http-auth
bug-reports:            https://github.com/trskop/spock-http-auth/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              Copyright (c) 2015, Peter Trško
category:               Network
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Web.Spock.HttpAuth
    , Web.Spock.HttpAuth.Internal
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:
      CPP
    , DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude
    , OverloadedStrings
    , TupleSections

  build-depends:
      base >=4.6 && <5
    -- ^ This constraint was taken from some of the Spock dependencies, e.g.
    -- reroute 0.2.2. Package reroute never allowed base < 4.5, so that would
    -- be a moot point. As a consequence this will not be running on GHC <=7.4.
    , case-insensitive >=1.1 && <1.3
    , mtl >=2.1 && <3
    , text >=1.1 && <1.3

    , base64-bytestring >=1.0
    , http-types >=0.8
    , Spock >= 0.7.2.0 && < 0.8

  if impl(GHC >= 7.9)
    cpp-options:        -DAPPLICATIVE_MONAD

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/spock-http-auth.git
